gccida/g0/pre_gcse
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/gcse.c:5503:20: error: expected identifier or '('
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/gcse.c:5503:42: error: expected ';' in 'for' statement specifier
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/gcse.c:5503:49: error: expected expression
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
                                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/gcse.c:5503:49: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/gcse.c:5503:5: note: to match this '('
for (  struct expr = expr_hash_table[i]; expr;  struct expr = expr->next_same_hash ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/gcse.c:5509:31: error: use of undeclared identifier 'edge_list_0'; did you mean 'edge_list'?
did_insert = pre_edge_insert( edge_list_0, index_map); 
                              ^~~~~~~~~~~
                              edge_list
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/gcse.c:4395:26: note: 'edge_list' declared here
static struct edge_list *edge_list;
                         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/pre_gcse/src/obj/gcse.o] Error 1
